[package]
name = "midgard-rs"
version = "0.0.1"
edition = "2021"
categories = ["thorswap", "migard", "thorchain", "api"]
license = "MIT"
keywords = ["thorswap", "migard", "thorchain", "api"]
readme = "README.md"
description = "Thorchain Midgard API client for Rust"
repository = "https://github.com/physics515/midgard-rs"

[dependencies]
serde = { version = "1", features = ["derive", "rc"] }
reqwest = "0"
thiserror = "1"
anyhow = "1"
serde_json = "1"
tokio = { version="1", features= ["macros"] }
serde_urlencoded = "0"
rand = "0"
serde-aux = "4"
chrono = { version="0", features=["serde"] }
serde_with = { version="3", features=["chrono"] }
rust_decimal = { version="1", features=["serde", "serde-str"] }
#rust_decimal_macros = "1"
tokio-test = "0"
