[package]
name = "midgard-rs"
version = "0.0.5"
edition = "2021"
categories = ["api-bindings", "cryptography::cryptocurrencies"]
license = "MIT"
keywords = ["thorswap", "migard", "thorchain", "api"]
readme = "README.md"
description = "Thorchain Midgard API client for Rust"
repository = "https://github.com/physics515/midgard-rs"

[dependencies]
serde = { workspace = true, features = ["derive", "rc"] }
reqwest = { workspace = true }
thiserror = { workspace = true }
anyhow = { workspace = true }
serde_json = { workspace = true }
tokio = { workspace = true, features= ["full"] }
serde_urlencoded = { workspace = true }
rand = { workspace = true }
serde-aux = { workspace = true }
chrono = { workspace = true, features=["serde"] }
serde_with = { workspace = true, features=["chrono"] }
rust_decimal = { workspace = true, features=["serde", "serde-str"] }
tokio-test = { workspace = true }
